--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="nav-link nav-social" href="#" title="Instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
           </nav>
         </div>
-      </div>      
+      </div>
       <div class="inner cover">
         <h1 class="cover-heading">The adventure Begins</h1>
         <p class="lead cover-copy">Hold tight as we get our working robots together and produce the most astonishing product ever.</p>
@@ -36,7 +36,7 @@
       </div>
       <div class="mastfoot">
         <div class="inner">
-          <p>&copy; Your Company. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a>.</p>
+          <p> Desigend By TemplateFlip</a>.</p>
         </div>
       </div>
       <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
