--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Coming Soon Bootstrap Template - Coming Soon</title>
+    <title>Venix - is Rising </title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="inner cover">
-        <h1 class="cover-heading">The adventure Begins</h1>
+        <h1 class="cover-heading">The adventure Well Begins Soon</h1>
         <p class="lead cover-copy">Hold tight as we get our working robots together and produce the most astonishing product ever.</p>
         <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Notify Me</button></p>
       </div>
@@ -51,7 +51,7 @@
             <div class="modal-body">
               <form>
                 <div class="form-group">
-                  <label for="recipient-name" class="form-control-label">Enter you e-mail to get notified when we launch</label>
+                  <label for="recipient-name" class="form-control-label">Enter you e-mail to be one of our tester or to get notified when we launch</label>
                   <input type="text" class="form-control" id="recipient-name" placeholder="your-name@example.com">
                 </div>
               </form>
