--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="cover-container">
       <div class="masthead clearfix">
         <div class="inner">
-          <h3 class="masthead-brand">Coming Soon</h3>
+          <h3 class="masthead-brand">Venix</h3>
           <nav class="nav nav-masthead">
             <a class="nav-link nav-social" href="#" title="Facebook"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
             <a class="nav-link nav-social" href="#" title="Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
