--- a/index.html
+++ b/index.html
@@ -39,6 +39,27 @@
         <div class="inner">
         </div>
       </div>
+
+      <button data-tf-popup="wWA6iO5a" data-tf-hide-headers data-tf-size="70" data-tf-open="exit" data-tf-open-value="50"
+      data-tf-auto-close style="all:unset;
+      font-family:Helvetica,Arial,sans-serif;
+      display:inline-block;
+      max-width:100%;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+      background-color:#FFFFFF;
+      color:#FFFFFF;font-size:20px;
+      border-radius:25px;
+      padding:0 33px;
+      font-weight:bold;
+      height:50px;
+      cursor:pointer;
+      line-height:50px;
+      text-align:center;
+      margin:0;
+      text-decoration:none;"> Subscribe </button>
+      <script src="//embed.typeform.com/next/embed.js"></script>
 <!--
       <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
