--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
       </div>
 
-      <button data-tf-popup="wWA6iO5a" data-tf-hide-headers data-tf-size="70" data-tf-open="exit" data-tf-open-value="50"
+<!--      <button data-tf-popup="wWA6iO5a" data-tf-hide-headers data-tf-size="70" data-tf-open="exit" data-tf-open-value="50"
       data-tf-auto-close style="all:unset;
       font-family:Helvetica,Arial,sans-serif;
       display:inline-block;
@@ -60,14 +60,16 @@
       margin:0;
       text-decoration:none;"> Subscribe </button>
       <script src="//embed.typeform.com/next/embed.js"></script>
-<!--
+      !-->
+      <div data-tf-widget="wWA6iO5a"></div>
+
       <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="subscribeModalLabel">Get Notified on Launch:</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+                <div data-tf-widget="<form id>"></div>
               </button>
             </div>
             <div class="modal-body">
@@ -86,7 +88,7 @@
     </div>
   </div>
 </div>
-!-->
+    <script src="//embed.typeform.com/next/embed.js"></script>
     <script src="scripts/jquery.slim.min.js?ver=1.2.0"></script>
     <script src="scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
     <script src="scripts/main.js?ver=1.2.0"></script>
