--- a/index.html
+++ b/index.html
@@ -34,42 +34,18 @@
         <p class="lead cover-copy">Hold tight as we get our working robots together and produce the most astonishing product ever.</p>
         <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Notify Me</button></p>
       </div>
-
       <div class="mastfoot">
         <div class="inner">
+          
         </div>
       </div>
-
-<!--      <button data-tf-popup="wWA6iO5a" data-tf-hide-headers data-tf-size="70" data-tf-open="exit" data-tf-open-value="50"
-      data-tf-auto-close style="all:unset;
-      font-family:Helvetica,Arial,sans-serif;
-      display:inline-block;
-      max-width:100%;
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-      background-color:#FFFFFF;
-      color:#FFFFFF;font-size:20px;
-      border-radius:25px;
-      padding:0 33px;
-      font-weight:bold;
-      height:50px;
-      cursor:pointer;
-      line-height:50px;
-      text-align:center;
-      margin:0;
-      text-decoration:none;"> Subscribe </button>
-      <script src="//embed.typeform.com/next/embed.js"></script>
-      !-->
-      <div data-tf-widget="wWA6iO5a"></div>
-
       <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="subscribeModalLabel">Get Notified on Launch:</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <div data-tf-widget="<form id>"></div>
+                <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
@@ -88,7 +64,6 @@
     </div>
   </div>
 </div>
-    <script src="//embed.typeform.com/next/embed.js"></script>
     <script src="scripts/jquery.slim.min.js?ver=1.2.0"></script>
     <script src="scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
     <script src="scripts/main.js?ver=1.2.0"></script>
