--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
       <div class="inner cover">
         <h1 class="cover-heading">The adventure Well Begins Soon</h1>
         <p class="lead cover-copy">Hold tight as we get our working robots together and produce the most astonishing product ever.</p>
-        <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Notify Me</button></p>
+      <!--  <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Notify Me</button></p> !-->
       </div>
       <div class="mastfoot">
         <div class="inner">
 
         </div>
       </div>
-      <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
+      <!--<div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -64,7 +64,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default">Subscribe</button>
-            </div>
+            </div>-->
           </div>
         </div>
     </div>
